methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:10: error: value unary_! is not a member of Int
while(!getX()==1) 
      ^MethodsDogHouse:15: error: value unary_! is not a member of Int
while(!getX()==4) 
      ^MethodsDogHouse:25: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:31: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:41: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:51: error: not found: value dogHouse
		dogHouse();		
                ^