methods.basics.MethodsDogHouse.scala.code
def avcolor()
{
  left();
  brushDown();
  forward();
  brushUp();
}


while(!getX()==1) 
{
  avcolor();
}

while(!getX()==4) 
{
  avcolor();
}
